--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,99 +2,7 @@
 <html>
 <head>
     <title>Face Recognition System</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .video-container {
-            flex: 1;
-            min-width: 400px;
-        }
-        .controls {
-            flex: 0 0 300px;
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        .controls h3 {
-            margin-top: 0;
-            color: #333;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: none;
-            border-radius: 4px;
-            background-color: #007bff;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        button:disabled {
-            background-color: #cccccc;
-            cursor: not-allowed;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        .result-box {
-            background: white;
-            padding: 15px;
-            border-radius: 4px;
-            border-left: 5px solid #007bff;
-            margin-top: 20px;
-            word-wrap: break-word;
-        }
-        .success {
-            border-left-color: #28a745;
-            color: #155724;
-        }
-        .error {
-            border-left-color: #dc3545;
-            color: #721c24;
-        }
-        video, canvas {
-            width: 100%;
-            border-radius: 8px;
-            background: #000;
-        }
-        canvas {
-            display: none;
-        }
-        .status-indicator {
-            display: inline-block;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            margin-right: 5px;
-        }
-        .camera-on {
-            background-color: #28a745;
-        }
-        .camera-off {
-            background-color: #dc3545;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -130,148 +38,6 @@
         </div>
     </div>
 
-    <script>
-        const video = document.getElementById('video');
-        const canvas = document.getElementById('canvas');
-        const toggleBtn = document.getElementById('toggleCameraBtn');
-        const testBackendBtn = document.getElementById('testBackendBtn');
-        const registerBtn = document.getElementById('registerBtn');
-        const verifyBtn = document.getElementById('verifyBtn');
-        const registerNameInput = document.getElementById('registerName');
-        const resultDiv = document.getElementById('result');
-        const cameraStatus = document.getElementById('cameraStatus');
-        const cameraStatusText = document.getElementById('cameraStatusText');
-
-        let stream = null;
-
-        // Helper untuk update status kamera
-        function updateCameraUI() {
-            if (stream) {
-                cameraStatus.className = 'status-indicator camera-on';
-                cameraStatusText.innerText = 'Kamera menyala';
-                toggleBtn.innerText = 'Matikan Kamera';
-            } else {
-                cameraStatus.className = 'status-indicator camera-off';
-                cameraStatusText.innerText = 'Kamera mati';
-                toggleBtn.innerText = 'Hidupkan Kamera';
-            }
-        }
-
-        // Fungsi toggle kamera
-        async function toggleCamera() {
-            if (stream) {
-                stopCamera();
-            } else {
-                await startCamera();
-            }
-            updateCameraUI();
-        }
-
-        async function startCamera() {
-            try {
-                stream = await navigator.mediaDevices.getUserMedia({ video: true });
-                video.srcObject = stream;
-            } catch (err) {
-                console.error(err);
-                setResult('Gagal mengakses kamera: ' + err.message, 'error');
-            }
-        }
-
-        function stopCamera() {
-            if (stream) {
-                stream.getTracks().forEach(track => track.stop());
-                video.srcObject = null;
-                stream = null;
-            }
-        }
-
-        // Capture gambar dari video
-        function captureImage() {
-            if (!stream) {
-                setResult('Kamera tidak aktif', 'error');
-                return null;
-            }
-            canvas.getContext('2d').drawImage(video, 0, 0, 640, 480);
-            return canvas.toDataURL('image/jpeg', 0.8).split(',')[1];
-        }
-
-        // Set hasil di result box
-        function setResult(msg, type = 'info') {
-            resultDiv.innerText = msg;
-            resultDiv.className = 'result-box';
-            if (type === 'success') resultDiv.classList.add('success');
-            else if (type === 'error') resultDiv.classList.add('error');
-        }
-
-        // Test backend
-        async function testBackend() {
-            try {
-                const res = await fetch('http://localhost:8080/health');
-                const text = await res.text();
-                setResult('Backend: ' + text, 'success');
-            } catch (err) {
-                setResult('Gagal koneksi ke backend: ' + err.message, 'error');
-            }
-        }
-
-        // Daftar wajah
-        async function registerFace() {
-            const name = registerNameInput.value.trim();
-            if (!name) {
-                setResult('Nama harus diisi', 'error');
-                return;
-            }
-            const imageBase64 = captureImage();
-            if (!imageBase64) return;
-
-            try {
-                const res = await fetch('http://localhost:8080/register', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ name: name, image: imageBase64 })
-                });
-                const result = await res.json();
-                setResult('Pendaftaran berhasil: ' + JSON.stringify(result), 'success');
-            } catch (err) {
-                setResult('Gagal daftar: ' + err.message, 'error');
-            }
-        }
-
-        // Verifikasi wajah
-        async function verifyFace() {
-            const imageBase64 = captureImage();
-            if (!imageBase64) return;
-
-            try {
-                const res = await fetch('http://localhost:8080/verify', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ image: imageBase64 })
-                });
-                const result = await res.json();
-                if (result.name) {
-                    setResult(`Dikenali sebagai: ${result.name} (confidence: ${(result.confidence*100).toFixed(2)}%)`, 'success');
-                } else {
-                    setResult('Wajah tidak dikenali', 'error');
-                }
-            } catch (err) {
-                setResult('Gagal verifikasi: ' + err.message, 'error');
-            }
-        }
-
-        // Event listeners
-        toggleBtn.addEventListener('click', toggleCamera);
-        testBackendBtn.addEventListener('click', testBackend);
-        registerBtn.addEventListener('click', registerFace);
-        verifyBtn.addEventListener('click', verifyFace);
-
-        // Enable/disable register button berdasarkan input nama
-        registerNameInput.addEventListener('input', function() {
-            registerBtn.disabled = this.value.trim() === '';
-        });
-
-        // Inisialisasi: coba nyalakan kamera otomatis (opsional)
-        startCamera().then(() => updateCameraUI()).catch(() => updateCameraUI());
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
